; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_clock-util.c_clock_reset_timewarp.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_clock-util.c_clock_reset_timewarp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32 }
%struct.timezone = type { i64, i64 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @clock_reset_timewarp() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.timeval*, align 8
  %3 = alloca %struct.timezone, align 8
  store %struct.timeval* null, %struct.timeval** %2, align 8
  %4 = getelementptr inbounds %struct.timezone, %struct.timezone* %3, i32 0, i32 1
  store i64 0, i64* %4, align 8
  %5 = getelementptr inbounds %struct.timezone, %struct.timezone* %3, i32 0, i32 0
  store i64 0, i64* %5, align 8
  %6 = load %struct.timeval*, %struct.timeval** %2, align 8
  %7 = call i64 @settimeofday(%struct.timeval* %6, %struct.timezone* %3)
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = load i32, i32* @errno, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %1, align 4
  br label %13

12:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %13

13:                                               ; preds = %12, %9
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i64 @settimeofday(%struct.timeval*, %struct.timezone*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
